# MediaManager-

./: .gitattributes  .gitignore  AGENTS.md  INSTALL.md  LICENSE  MOD-DEVELOPMENT.md  MediaManager.spec  README.md  desktop.py  main.py  pyproject.toml  requirements-lock.txt  安裝必備軟體.bat  暫存檔清除.bat
contracts/: __init__.py  _additive_result.py  adapter_manifest_v1.py  capabilities.py  diagnostic_evidence_v1.py  discovery_v1.py  download_capability_v2.py  download_provider.py  errors.py  history_v1.py  media_analysis_v1.py  media_options_v1.py  messages_v1.py  playlist_v1.py  provider_capability_v1.py  provider_failure_v1.py  recovery_v1.py  search_v2.py  similar_v1.py  split_plan_v1.py
core/: __init__.py  archive_import.py  builtin_mod_catalog.py  builtin_mod_snapshot.py  dependency_health.py  dependency_snapshot.py  localization.py  media_library.py  mod_groups.py  runtime_policy.py  self_check.py  settings.py  site_routing.py  version.py
docs/: README.md  adapter-sdk.md  ani-gamer-feasibility.md  ani-gamer-offline-archive.md  ani-gamerplus-adaptation.md  change-inventory-development-32.1.md  comparable-software-options.md  dependency-health.md  direct-http-boundary.md  downloads-v1.md  github-auto-merge.md  latest-update.md  mega-boundary.md  mega-feasibility.md  meta-social-feasibility.md  mod-developer-guide.md  mod-package-v1.md  multisite-danmaku-roadmap.md  native-crash-evidence-runbook.md  project-status.md  release-1.1.md  release-1.2.md  release-1.3.md  release-1.4.md  release-1.5.md  release-1.6.md  release-1.7.md  release-1.8.md  release-1.9.md  (+101 more)
(+426 files in other folders)
